gcc/testsuite/rust/rustc/ui/parser/keyword-else-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py else'

fn main() {
    let else = "foo"; // { dg-error "" "" { target *-*-* } }
}

